tests/NormalTests/paczka1/small_fuzzy/72803445.err
Error in line 2: Pp7BA6 S857 59,6
Error in line 12: S857 A664 -22,5
